--- a/Week 3/index.html
+++ b/Week 3/index.html
@@ -1,6 +1,30 @@
+
+<DOCTYPE! html>
 <head>
-    <link  rel="stylesheet" href="../style.css">
+    <title>
+       basic scene prototype 
+    </title>
+
+    <!---css-->
+    <link rel="stylesheet" href="style.css">
+
+    <!---three.js import map-->
+
+    <script type="importmap">
+        {
+            "imports":{
+                "three": "https://ga.jspm.io/npm:three@0.158.0/build/three.module.js"
+            }
+        }
+    </script>
+
+    <!---three.js scene-->
+    <script src="script.js" type="module"></script>
+
 </head>
 
+<body>
+    <h1>Three.Js basic scene</h1> 
 
-week 3 Prototypes goes here
+    <canvas class ="webgl"></canvas>
+</body>
