--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
        <li>Week 3 <a href="Week 3/index.html">First scene</a></li>
        <li>Week 4 <a href="Week 4/index.html">Flat land</a></li>
-       <li>Week 5 <a href="">Plato</a></li>
+       <li>Week 5 <a href="Week5/index.html">Plato</a></li>
        <li>Week 8 <a href="">3D Portfolio</a></li>
        <li>Week 10 <a href="">Data Visualization</a></li>
     </ul>
