--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Assingments
     </h2>
     <ol>
-        <li>Week 7 <a href=""> Interactive Essay</a></li>
+        <li>Week 7 <a href="Week6/Assingment1/index.html"> Interactive Essay</a></li>
         <li>Week 12 <a href="">Data Visualization</a></li>
     </ol>
 </body>
