--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <li>Week 4 <a href="Week 4/index.html">Flat land</a></li>
        <li>Week 5 <a href="Week5/index.html">Plato</a></li>
        <li>Week 8 <a href="">3D Portfolio</a></li>
-       <li>Week 10 <a href="">Data Visualization</a></li>
+       <li>Week 9 <a href="week9/index.html">Data Visualization</a></li>
     </ul>
     <h2>
         Assingments
