--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </h2>
     <ol>
         <li>Week 7 <a href="Week6/Assingment1/index.html"> Interactive Essay</a></li>
-        <li>Week 12 <a href="">Data Visualization</a></li>
+        <li>Week 12 <a href="Assingment2/index.html">Data Visualization</a></li>
     </ol>
 </body>
