--- a/Assingment2/index.html
+++ b/Assingment2/index.html
@@ -32,13 +32,13 @@
    <h2>HAMZA ADIL</h2>
    
    
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi suscipit pretium dui vel interdum. Aenean vitae enim accumsan, cursus turpis nec, hendrerit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce tincidunt felis non massa commodo molestie. Maecenas sed feugiat ligula, et egestas enim. Nam interdum varius nunc id bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ac nulla vel nibh vestibulum sollicitudin. Vivamus semper tristique erat, eget rutrum turpis faucibus at. Curabitur porttitor pellentesque lectus, vitae molestie dui consequat vitae.</p>
+    <p>In the boundless and dynamic universe of One Piece, the audacious Straw Hat Pirates set sail on one of their most thrilling quests yet, steering their ship towards the enigmatic realm of Wano. Guided by their intrepid and dauntless captain, Luffy, their arrival at the fog-veiled coasts of Wano signals the commencement of a grand saga teeming with conspiracy, insurrection, and redemption.</p>
 
-    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis cursus dictum porttitor. Suspendisse elementum sem sapien, ut varius odio ornare nec. Praesent pulvinar nunc vel lorem eleifend varius. Maecenas in dictum arcu. Mauris vehicula consectetur turpis ut rhoncus. Integer malesuada malesuada mi vel aliquam. Ut molestie commodo diam, id vulputate ex tempor eget.</p>
+    <p>Wano, a territory imbued with age-old customs and enigma, is under the iron-fisted rule of the sinister Shogun Kurozumi Orochi and the formidable pirate emperor, Kaido. As the Straw Hat Pirates navigate through Wano’s complex web of culture and conflict, they find themselves entangled in a fight for liberty against these despotic rulers.</p>
     <!--dataViz 1-->
 
     <div class ='canvas-container'>
-        <h2> Heros of Wano</h2>
+        <h2> Straw Hat Pirates</h2>
     <!--
         <ul>
             <li id = "red">Dumbledore</li>
@@ -54,13 +54,19 @@
         </p>
     </div>
 
-    <p>Quisque a leo ultricies, viverra sapien quis, semper est. Quisque sed feugiat velit. Mauris rhoncus, leo vitae sodales mattis, neque erat cursus ipsum, sit amet fermentum tortor nibh at urna. Sed mollis leo eu orci pellentesque, et auctor lacus laoreet. Sed aliquam eget tellus blandit interdum. Nam sem est, congue in consectetur at, sodales ac nunc. Nunc egestas interdum felis, eget mattis sapien congue et. Ut bibendum ipsum a cursus congue. Ut ultrices lorem vitae accumsan condimentum.</p>
+    <p>Scattered upon their arrival, each member of the Straw Hat crew embarks on a distinctive journey within the confines of Wano. Luffy, with his unyielding spirit and steadfast resolve, finds himself in the Flower Capital, the pulsating hub of the rebellion against Orochi’s despotic regime. Here, the tale of Kozuki Oden, a legendary samurai who once dreamt of opening Wano’s borders to the world, strikes a chord with Luffy and fuels his determination to aid in the liberation of the land.</p>
 
-    <p>Aenean nec nibh tincidunt, feugiat neque molestie, scelerisque metus. Integer est sem, porta at neque eget, lacinia imperdiet nisl. Suspendisse aliquet nec orci et condimentum. Donec id ligula vel mauris tempus elementum vitae in tellus. Phasellus purus erat, dictum non feugiat vitae, laoreet sit amet dui. Vivamus a mi in odio euismod maximus. Sed pretium sit amet turpis vel gravida. Nam vitae mauris sit amet arcu aliquam gravida. Nullam sollicitudin dui faucibus sem luctus, sed vestibulum arcu rhoncus. Mauris ac dolor scelerisque, rhoncus metus id, pharetra odio. Quisque porttitor odio arcu, a cursus urna semper quis. Nunc vehicula ex fringilla dui bibendum finibus. Fusce lobortis eget dui vel scelerisque. Sed tortor purus, scelerisque fermentum viverra vitae, rutrum sed libero. Quisque dignissim, libero vitae dictum sodales, justo metus dictum tellus, nec porta est sem id tortor. Donec malesuada rutrum aliquet.</p>
+    <p>Simultaneously, Zoro, the adept swordsman of the Straw Hat crew, immerses himself in Wano’s abundant swordsmithing traditions. As he sharpens his skills and uncovers the secrets of Wano’s legendary blades, Zoro becomes a crucial part of the rebellion, contributing his might and expertise to the cause. Nami and Robin, the brains of the crew, are captivated by Wano’s rich history and mythology. Diving into ancient manuscripts and legends, they unearth clues that illuminate Wano’s concealed past and its ties to the expansive world of One Piece. Their findings play a critical role in deciphering the enigmas of Wano and formulating strategies to counter Orochi and Kaido’s forces.
+     </p>
+    
+
+    <p>At the heart of the arc’s narrative is Kozuki Momonosuke, Oden’s youthful successor. Initially uncertain of his place in the world and weighed down by his heritage, Momonosuke finds guidance and mentorship in Luffy. With Luffy’s encouragement, Momonosuke masters the ways of the samurai, matures into his role as a leader, and becomes a beacon of hope and resilience for the people of Wano.
+    </p>
+    <p>As alliances are forged and battles erupt, the Straw Hat Pirates rally the denizens of Wano in a daring insurrection against Orochi and Kaido. United in their cause, they embark on audacious raids, engage in monumental battles, and inspire the populace to rise against their oppressors. The momentum escalates towards the climactic “Onigashima Raid,” a battle that will decide the destiny of Wano and its inhabitants.</p>
     <!--DataViz 2-->
 
     <div class ='canvas-container'>
-        <h2> Antagonists of Wano</h2>
+        <h2>Heroes and Villans</h2>
     <!--
        
         -->     
@@ -71,8 +77,13 @@
             Scroll to zoom.
         </p>
     </div>
+    <p>
+     Under the luminescence of the full moon, Luffy, alongside his Straw Hat comrades and a coalition of allies, confronts Kaido and Orochi in an epic face-off. It’s a clash of ideals and ambitions, with the future of Wano teetering on the edge. Despite the insurmountable odds, the Straw Hat Pirates stand resolute, their spirits unshaken, and their resolve steadfast.
+    </p>
+    <p>
+     In the end, it’s not just brute strength or skill that prevails, but the unyielding spirit of freedom, camaraderie, and the bonds of friendship forged amidst adversity. The shadows that had long loomed over Wano are banished, and a new dawn begins to ascend over the land, heralding the onset of a new era of hope and prosperity. As the Straw Hat Pirates hoist their sails once more, leaving behind a liberated Wano, their journey leaves a lasting imprint on the land and its people. The chronicle of their adventure becomes a legend, whispered by seafarers and narrated by storytellers, a testament to the power of hope, courage, and the relentless pursuit of freedom in Wano.
 
-    <p>Nullam a augue lacinia, mollis tortor et, cursus nibh. Aenean laoreet, elit eget sagittis tincidunt, nulla lacus ultrices libero, ac pulvinar lacus ex in urna. Etiam imperdiet placerat porta. Vestibulum at semper felis, sed aliquet metus. Sed lacinia justo eget eros pulvinar egestas. Ut a fringilla augue, at maximus justo. Donec dolor sem, tempus non arcu at, lacinia finibus risus.</p>
 
+    </p>
    
 </body>
